fix layout issue on search page, hopefully

--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -286,7 +286,7 @@ td {
 }
 
 #reports th.rating {
-//	width: 30%;
+	min-width: 180px;
 }
 
 .report {
